--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -346,7 +346,11 @@
     margin-left: 0px;
 }
 .button_type_ios-invest {
-  padding-left: 100px;
+  padding-left: 90px;
+  width: 150px;
+}
+.button_type_ios-invest::after {
+  background-position: 56px;
 }
 .investment__image {
   width: 142px;
