--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -117,6 +117,11 @@ details {
             line-height: 20px;
             font-weight: 500;
         }
+        .details__list {
+            display: list-item;
+            font-size: 14px;
+            color: rgb(100, 100, 227);
+        }
     }
     
     @media screen and (max-width: 320px) {
