--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -16,8 +16,9 @@
 }
 .apps__subapps {
   display: flex;
-  column-gap: 142px;
+  column-gap: 160px;
   align-items: center;
+  justify-content: center;
 }
 .apps__subapps-title {
   margin: 0 0 25px 0;
@@ -186,7 +187,7 @@
 }
 @media screen and  (max-width: 1440px) {
   .section__wrapper {
-    margin: 0 100px;
+    margin: 0 110px;
   }
   .apps__briefs-item {
     column-gap: 30px;
@@ -205,7 +206,7 @@
     padding: 30px 0 100px 0;
   }
   .apps__subapps {
-    column-gap: 60px;
+    column-gap: 90px;
   }
 }
 @media screen and  (max-width: 1240px) {
