--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -61,10 +61,15 @@
     justify-content: center;
   }
 }
-@media (max-width: 360px) {
+@media (max-width: 375px) {
   .team__body {
     margin-left: 12px;
     margin-right: 12px;
+  }
+  .team__title {
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 27px;
   }
 }
 .team__column {
@@ -301,9 +306,12 @@ font-size: 12px;
     max-width: 80px;
   }
   .team__title{
-    padding-top: 220px;
+    padding-top: 140px;
     margin-bottom: 81px;
     margin-top: 0;
+      font-size: 40px;
+      font-weight: 600;
+      line-height: 48px;
   }
 }
 @media (max-width: 375px) {
