--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -75,6 +75,7 @@
 }
 .card-body__list_copy{
   cursor: pointer;
+  background-color: #fff;
 }
 .sfera__wrapper {
   margin: 0 256px;
@@ -337,6 +338,12 @@
     line-height: 17px;
     font-weight: 600;
   }
+  .card-body__list_copy{
+    width: 10%;
+  }
+  .card-body__list_copy-img{
+    width: 100%;
+  }
 }
 @media screen and  (max-width: 320px) {
   .investment-body__text {
@@ -361,4 +368,8 @@
 .card__image-center {
   width: 280px;
 }
+.card-body__list_2,
+  .card-body__list_4{
+    font-size: 20px;
+  }
 }
