--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -135,11 +135,11 @@ background: #1f1f26;
 }
 .nav_list-item.active{
     border-bottom:2px solid rgba(0,0,0,0);
-    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 30
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 25
 }
 .nav_list-item:hover{
     border-bottom:2px solid rgba(0,0,0,0);
-    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 30
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 25
 }
 .checkButton {
     font-size: 30px;
@@ -179,7 +179,17 @@ background: #1f1f26;
         font-size: 18px;
     }
 }
-@media screen and (max-width:768px) {
+@media screen and (max-width: 1024px){
+    .nav_list-link {
+        font-size: 15px;
+        padding: 7px 9px;
+    }
+    .nav_list{
+        justify-content: right;
+    }
+
+}
+@media screen and (max-width: 992px) {
     .header__wrapper {
         padding: 0 50px;
     }
@@ -196,14 +206,14 @@ background: #1f1f26;
     .checkButton{
         display:flex;
         position: absolute;
-        left: 550px;
+        left: 850px;
         margin-bottom: 9px;
     }
     .video-container video {
         width: 678px;
         height: 490px;
         margin-left: 38px;
-        margin-top: 0px;
+        margin-top: 0;
     }
     .video-container .close {
         position: absolute;
@@ -246,7 +256,7 @@ background: #1f1f26;
         justify-content: center;
         padding-left: 10px;
     }
-    .button_downloads_ios {  
+    .button_downloads_ios {
         font-size: 14px;
         font-weight: 600;
         line-height: 22px;
@@ -254,31 +264,15 @@ background: #1f1f26;
         width: 146px;
         margin-bottom: 10px;
     }
-    .button_downloads_android {  
+    .button_downloads_android {
         font-size: 14px;
         font-weight: 600;
         line-height: 22px;
         padding-left: 70px;
         width: 150px;
-        
+
     }
-    /* .button_download{
-        width: 273px;
-        height: 42px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 16px 32px;
-        gap: 10px;
-        filter: drop-shadow(0px -4px 4px rgba(255, 0, 245, 0.25)) drop-shadow(0px 4px 4px rgba(34, 218, 229, 0.25));
-        border-radius: 16px ;
-<<<<<<< HEAD
-        color:black;
-    } */
-=======
-    }
->>>>>>> 7dfb91a8a829af9e5085e2dfa1109dc51dbe74a1
+
     .link_tablet-menu{
         width: 100%;
         height: 48px;
@@ -337,7 +331,142 @@ background: #1f1f26;
         color: black;
     }
     .langs{
-        margin-left: 90px;
+        padding-left: 292px;
+        margin-bottom: 14px;
+
+    }
+    .nav_list-link:hover,.nav_list-link.active{
+        color: #007094;
+    }
+    .myCheckBox:checked ~ .nav_list{
+        right: 0;
+    }
+}
+@media screen and (max-width: 912px){
+    .checkButton{
+        left: 820px;
+    }
+}
+@media screen and (max-width: 820px){
+    .langs {
+        padding-left: 168px;
+        margin-bottom: 14px;
+    }
+    .checkButton{
+        left: 750px;
+    }
+}
+@media screen and (max-width:768px) {
+    .header__wrapper {
+        padding: 0 50px;
+    }
+    .block-logo{
+        column-gap: 10px;
+        margin-left: 40px;
+    }
+    .logo_menu{
+        display: block;
+    }
+    label.logo {
+        padding-left: 25px;
+    }
+    .checkButton{
+        display:flex;
+        position: absolute;
+        left: 587px;
+        margin-bottom: 9px;
+    }
+    .video-container video {
+        width: 678px;
+        height: 490px;
+        margin-left: 38px;
+        margin-top: 0;
+    }
+    .video-container .close {
+        position: absolute;
+        left: 675px;
+        top: 25px;
+    }
+    .close_menu{
+        display: block;
+        color: black;
+    }
+    .nav_list-elements{
+        width: 400px;
+        height: 1024px;
+        flex-direction: column;
+        justify-content: flex-start;
+        overflow-y: scroll;
+        padding: 25px 0;
+    }
+    .header_menu-tablet{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 120px;
+        margin-top: 20px;
+    }
+    .logo__menu-item{
+        color: black;
+    }
+    .download_button-tablet{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+        padding-top: 25px;
+        padding-left: 10px;
+    }
+    .downloads_button {
+        justify-content: center;
+        padding-left: 10px;
+    }
+    .button_downloads_ios {  
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 22px;
+        padding-left: 73px;
+        width: 146px;
+        margin-bottom: 10px;
+    }
+    .button_downloads_android {  
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 22px;
+        padding-left: 70px;
+        width: 150px;
+        
+    }
+
+    .link_tablet-menu{
+        width: 100%;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 35px;
+    }
+    .menu-links{
+        padding: 0 20px;
+        color: #007094;
+    }
+
+    .nav_list-item {
+        width: 306px;
+        height: 39px;
+        display: block;
+        line-height: 50px;
+        margin-top: 45px;
+        margin-left: 0;
+    }
+    .nav_list-link{
+        font-size: 20px;
+        color: black;
+    }
+    .langs{
+        padding-left: 50px;
         margin-bottom: 14px;
 
     }
@@ -348,6 +477,15 @@ background: #1f1f26;
         right: 0;
     }
     
+}
+@media screen and (max-width: 540px) {
+    .checkButton{
+        left: 510px;
+    }
+    .langs{
+        padding-left: 0;
+        padding-right: 29px;
+    }
 }
 @media screen and (max-width:375px){
     .header__wrapper {
@@ -484,7 +622,7 @@ background: #1f1f26;
         background-position: 17px center;
     }
     .logo {
-        padding-left: 0px;
+        padding-left: 0;
     }
     .header_menu-tablet {
         column-gap: 40px;
@@ -499,7 +637,7 @@ background: #1f1f26;
     .download_button-tablet {
         justify-content: center;
         align-items: flex-start;
-        padding-left: 0px;
+        padding-left: 0;
     }
     .nav_list {
         width: 268px;
