--- a/assets/css/lending-card-cs.css
+++ b/assets/css/lending-card-cs.css
@@ -52,7 +52,7 @@
 }
 .product-front {
 	position: absolute;
-	/* width: 76%; */
+	width: 76%;
 	left: -5px;
 	border-radius: 35px;
 	transform: translateZ(7.8px);
@@ -68,7 +68,7 @@
 }
 .left-side {
 	width: 16px;
-	height: 96%;
+	height: 93%;
 	background: #1e1d1d;
 	transform: rotateY(90deg);
 	margin-top: 310px;
@@ -76,6 +76,13 @@
 	margin-left: 0px;
 	bottom: 589px;
 }
+/* ?======================================================= */
+.eng-left-side {
+	height: 95%;
+	margin-left: -5px;
+
+}
+/* ?======================================================= */
 .product-inner:hover {
 	transform: rotateY(180deg);
 	transition: transform 1.2s linear;
@@ -96,7 +103,7 @@
 		column-gap: 150px;
 	}
 	.left-side{
-		height: 96%;
+		height: 98%;
 	}
 }
 @media screen and (max-width: 768px) {
@@ -113,17 +120,13 @@
 		column-gap: 63px;
 		justify-content: center;
 	}
+	
 	.card-block__link {
 		font-size:14px ;
 		font-weight:600 ;
 		line-height:17px ;
 		position: relative;
-
-    	top: 0px;
-	}
-	.eng-card-block__link{
-		top: 290px;
-
+    top: px;
 	}
 	.card-block {
 		margin-bottom: 150px
@@ -132,8 +135,9 @@
 		margin-top: 50px;
 	}
 	.left-side {
-		height: 96%;
-		margin: 312px 0 0 0px;
+		height: 95%;
+		margin: 312px 0 0 -6px;
+		
 	}
 }
 @media screen and (max-width: 375px) {
@@ -174,51 +178,39 @@
 		height: 297px;
 	}
 	.left-side {
-			width: 16px;
-			height: 277px;
-			margin-top: 301px;
-			margin-left: 0px;
-		}
-		.card-block__link {
-			position: relative;
-			top: 190px;
-		}
-
-		.card-block__link {
-			position: relative;
-    	top: 190px;
-		}
-		/* .eng-card-block__link{
-		top: 110px;
-	} */
+		width: 16px;
+    height: 280px;
+    margin-top: 300px;
+    margin-left: -3px;
+  }
+	.card-block__link {
+		position: relative;
+    top: 190px;
+	}
 }
 @media screen and (max-width: 320px) {
-	.section-card {
-    padding: 40px 32px;
-}
-	.card-block {
-    margin-bottom: 150px;
-}
 	.product-back {
     right: 0px;
 	}
 	.card {
     column-gap: 10px;
-		}
-	.back{
-		width: 132px;
-		height: 297px;
-		left: 3px;
-	}
-	.front {
-		width: 132px;
-		height: 297px;
-		margin-left: 6px;
-	}
-	.left-side {
-		width: 16px;
-		height: 280px;
-		margin-top: 300px;
-		margin-left: 0px;
-	}
+}
+.back{
+	width: 132px;
+	height: 297px;
+	left: 3px;
+}
+.front {
+	width: 132px;
+	height: 297px;
+	margin-left: 6px;
+}
+.left-side {
+	width: 16px;
+	height: 280px;
+	margin-top: 300px;
+	margin-left: -1px;
+}
+	
+
 }
