--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -1,30 +1,31 @@
-#btn {
-    font-size: 14px;
+.lead__text__link {
+    list-style: none;
+    padding-left: 0;
+    color: rgba(255, 255, 255, 0.87);
+}
+
+#btn,
+#btnOne,
+#btnTwo,
+#btnThree {
+    font-size: 18px;
     line-height: 17px;
     font-weight: 600;
+    color: rgb(99, 99, 176);
 }
-#more {
+#more,
+#moreOne,
+#moreTwo,
+#moreThree{
     display: none;
 }
-#dots {
+#dots,
+#dotsOne,
+#dotsTwo,
+#dotsThree {
     display: none;
 }
-.venchur-body__link { 
-    padding: 0;
-  } 
-  .venchur__link {
-    padding-left: 25px;
-  }
-  .venchur-body-list {
-    font-size: 24px;
-    line-height: 29px;
-    margin-bottom: 40px;
-    list-style: none;
-    color: white;
-  } 
-  .venchur-list {
-    margin: 7px 0 7px 0;
-  }
+
 
 hr {
     margin: 0;
@@ -81,6 +82,10 @@ hr {
     .section__wrapper {
         margin: 0 25px;
     }
+    .apps__lead:first-of-type {
+        padding-top: 100px;
+    }
+    
     .apps__lead-image {
         max-width: 320px;
     }
