--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -268,7 +268,14 @@
     margin-left: 20px;
   }
   .button_type_ios-invest {
-    padding-left: 110px;
+    padding-left: 100px;
+  }
+  .button_type_ios {
+    padding-left: 85px;
+    width: 160px;
+  }
+  .button_type_ios-invest::after {
+    background-position: 42px;
   }
   .investment-body__title {
     width: 200px;
@@ -349,12 +356,15 @@
   .investment-body__text {
     max-width: 210px;
   }
+  .button_type_android {
+    padding-left: 58px;
+}
   .lead__download-links-list {
     margin-left: 0px;
 }
 .button_type_ios-invest {
-  padding-left: 90px;
-  width: 150px;
+  padding-left: 80px;
+  width: 152px;
 }
 .button_type_ios-invest::after {
   background-position: 56px;
