--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -1,32 +1,105 @@
+.apps-main {
+    margin-top: 0;
+    padding-top: 40px;
+    color: rgba(255, 255, 255, 0.87);
+}
+
+
+.container {
+    display: flex;
+    margin-top: 30px;
+  }
+#btnOne,
+#btnTwo,
+#btnThree,
+#btnFor {
+    color: rgb(87 87 227);
+    cursor: pointer;
+}
+.modalOne,.modalTwo,.modalThree,.modalFor {
+    display: none; 
+    position: fixed; 
+    z-index: 999990; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(86, 80, 80, 0.4); 
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    /* transition: 2s; */
+}
+.modal-content-one,
+.modal-content-two,
+.modal-content-three,
+.modal-content-for {
+    background-color:#312f36;
+    margin: auto;
+    width: 90%;
+    padding: 20px;
+    position: relative;
+    
+}
+.closeOne,
+.closeTwo,
+.closeThree,
+.closeFor {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-right: 7px;
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
+}
+.closeTwo:hover,
+.closeTwo:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.closeOne :hover,
+.closeOne :focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.closeThree:hover,
+.closeThree:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.closeFor:hover,
+.closeFor:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.modal-main {
+    text-align: center;
+}
+.modal-image-center {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+}
+.modal-image {
+    padding: 50px 0;
+    max-width: 1500px; 
+}
+.modal-paragraf {
+    max-width: 1500px;
+    margin: 0 auto;
+}
 .lead__text__link {
     list-style: none;
     padding-left: 0;
     color: rgba(255, 255, 255, 0.87);
 }
-
-#btn,
-#btnOne,
-#btnTwo,
-#btnThree {
-    font-size: 18px;
-    line-height: 17px;
-    font-weight: 600;
-    color: rgb(99, 99, 176);
-}
-#more,
-#moreOne,
-#moreTwo,
-#moreThree{
-    display: none;
-}
-#dots,
-#dotsOne,
-#dotsTwo,
-#dotsThree {
-    display: none;
-}
-
-
 hr {
     margin: 0;
 }
@@ -49,13 +122,17 @@ hr {
     line-height: 29px;
     max-width: 700px;
 }
-.details__list {
-    color: rgb(100, 100, 227);
+.apps__lead-image {
+    max-width: 700px;
 }
 
 @media screen and (max-width: 1440px) {
     .section__wrapper {
         margin: 0 70px;
+    }
+    .modal-image {
+        padding: 50px 0;
+        max-width: 1000px;
     }
 }
 @media screen and (max-width: 1240px) {
@@ -63,10 +140,41 @@ hr {
         margin: 0 30px;
     }
     .apps__lead-image {
-        max-width: 520px;
+        max-width: 500px;
+    }
+    
+    .modal-image {
+        max-width: 700px;
+    }
+    .lead__text-container {
+        font-size: 20px;
+        line-height: 24px; 
+    }
+}
+@media screen and (max-width: 1240px) {
+    .section__wrapper {
+        margin: 0 30px;
+    }
+    .lead__flex {
+        padding: 10px 0;
+    }
+    .lead__text-container,.lead__text {
+        font-size: 18px;
+        line-height: 22px; 
     }
 }
 @media screen and (max-width: 768px) {
+    .apps-main {
+        font-size: 40px;
+        line-height: 54px;
+        font-weight: 600;
+        padding-top: 126px;
+        text-align: center;
+        margin-bottom: 0;
+    }
+    .modal-image {
+        max-width: 500px;
+    }
     .lead__flex {
     flex-direction: column;
     padding: 100px 0 0 0;
@@ -79,6 +187,13 @@ hr {
     }
 }
 @media screen and (max-width: 375px) {
+    .modal-image {
+        max-width: 270px;
+    }
+    .modal-paragraf {
+        font-size: 18px;
+        line-height: 22px;
+    }
     .section__wrapper {
         margin: 0 25px;
     }
@@ -88,6 +203,11 @@ hr {
     
     .apps__lead-image {
         max-width: 320px;
+    }
+    .apps-main {
+        
+        padding-top: 20px;
+    
     }
     .lead__text {
         color: rgba(255, 255, 255, 0.87);
