--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -40,7 +40,6 @@
     width: 90%;
     padding: 20px;
     position: relative;
-    
 }
 .closeOne,
 .closeTwo,
@@ -240,5 +239,25 @@ hr {
 }
 
 
-
-
+.modal-footer{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.modal-arrow{
+    position: relative;
+    width: 50px;
+    margin: 0 auto;
+    animation: arrow 2s infinite ease;
+}
+.modal-arrow img{
+    width: 100%;
+}
+@keyframes arrow {
+    0% {
+      top: 0; }
+    50% {
+      top: 15px; }
+    100% {
+      top: 0; } }
