--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -172,12 +172,12 @@
 }
 }
 @media screen and  (max-width: 768px) {
-  .button_type_ios-invest {
+  /* .button_type_ios-invest {
 		padding-left:118px;
 	}
   .button_type_ios-invest::after {
     background-position: 63px
-  }
+  } */
   .investment__wrapper,
   .sfera__wrapper,
   .venchur__wrapper,
@@ -267,16 +267,17 @@
     margin-top: 375px;
     margin-left: 20px;
   }
-  .button_type_ios-invest {
+  /* .button_type_ios-invest {
     padding-left: 100px;
-  }
-  .button_type_ios {
+  } */
+  /* .button_type_ios {
     padding-left: 85px;
-    width: 160px;
+    width: 159px;
   }
   .button_type_ios-invest::after {
     background-position: 42px;
-  }
+  } */
+  
   .investment-body__title {
     width: 200px;
     font-size: 22px;
@@ -335,7 +336,10 @@
     line-height: 17px;
     margin-bottom: 20px;
   }
-  .venchur-body-list, .venchur-list, .sfera-body__downtext, .sfera-body__link { 
+  .venchur-body-list, 
+  .venchur-list, 
+  .sfera-body__downtext,
+  .sfera-body__link { 
     font-size: 14px;
     line-height: 17px;
     font-weight: 400;
@@ -357,7 +361,7 @@
     max-width: 210px;
   }
   .lead__download-links-list {
-    margin-left: 0px;
+    margin-left: -5px;
   }
   .button_type_ios-invest::after {
   background-position: 56px;
