--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -378,6 +378,16 @@ a {
   column-gap: 30px;
 }
 }
+@media screen and (max-width: 1185px){
+  .section-as-iframe-video {
+    width: 1145px;
+  }
+  .section-image-one,
+  .section-image-two {
+    width: 190px;
+    height: 420px;
+}
+}
 @media screen and (max-width: 768px) {
   .lead__download-links-list {
     justify-content: center;
