--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -377,6 +377,14 @@ a {
 .block-for {
   column-gap: 30px;
 }
+.section-as-iframe-video {
+  width: 1145px;
+}
+.section-image-one,
+  .section-image-two {
+    width: 190px;
+    height: 420px;
+}
 }
 @media screen and (max-width: 1185px){
   .section-as-iframe-video {
