--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -394,7 +394,10 @@ a {
   .section-image-two {
     width: 190px;
     height: 420px;
-}
+  }
+  .section-first-paragraf {
+    font-size: 55px;
+  }
 }
 @media screen and (max-width: 768px) {
   .lead__download-links-list {
