--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -185,12 +185,12 @@
 }
 }
 @media screen and  (max-width: 768px) {
-  /* .button_type_ios-invest {
-		padding-left:118px;
-	}
-  .button_type_ios-invest::after {
-    background-position: 63px
-  } */
+ 
+  .investment-body {
+    display: flex;
+    column-gap: 320px;
+    padding: 100px 0 100px 0;
+  }
   .investment__wrapper,
   .sfera__wrapper,
   .venchur__wrapper,
@@ -214,8 +214,9 @@
     flex-direction: column;
   }
   .investment__image {
+    position: absolute;
     width: 230px;
-    top: 198px;
+    top: 110px;
     right: 80px;
   }
   .lead__download-links-list {
