--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -311,4 +311,10 @@ line-height: 22px;
   .lead__images {
     column-gap: 16px;
   }
+  .lead__download-links-list {
+    flex-direction: column-reverse;
+    row-gap: 10px;
+    margin-top: 425px;
+    align-items: center;
+}
 }
