--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -146,6 +146,15 @@
     padding-top: 40px;
 }
 }
+@media screen and  (max-width: 1024px){
+.lead__image {
+  width: 189px;
+  height: 424px;
+}
+.lead__download-links-list {
+  column-gap: 8px;
+}
+}
 @media screen and  (max-width: 992px){
   .lead__wrapper {
     margin: 0 44px;
@@ -183,6 +192,12 @@
   }
 }
 @media screen and  (max-width: 768px){
+
+  .lead__image {
+    width: 225px;
+    height: 488px;
+  }
+
 .lead__wrapper {
     margin: 0 16px;
   }
@@ -255,7 +270,7 @@ line-height: 22px;
     margin-top: 100px;
   }
 }
-@media screen and  (max-width: 375px){
+@media screen and  (max-width: 425px){
   .lead__title {
     font-weight: 600;
     font-size: 22px;
@@ -277,7 +292,7 @@ line-height: 22px;
   }
   .lead__image {
     width: 133px;
-    height: 300px;
+    height: 295px;
   }
   .description__heading__content {
     margin-top: 50px;
@@ -285,13 +300,13 @@ line-height: 22px;
   .lead-text {
     margin-top: 0px;
 }
-  .lead__images {
-    position: absolute;
-    top: 300px;
-    left: 35px;
-    object-fit: contain;
-    width: 200px;
-  }
+.lead__images {
+  position: absolute;
+  top: 260px;
+  left: 50px;
+  object-fit: contain;
+  width: 200px;
+}
   .lead__download-links-list {
     flex-direction: column-reverse;
     row-gap: 10px;
@@ -300,6 +315,16 @@ line-height: 22px;
   }
 .description__wrapper {
   margin: 0 20px;
+  }
+}
+
+@media screen and  (max-width: 375px){
+  .lead__images {
+    position: absolute;
+    top: 300px;
+    left: 35px;
+    object-fit: contain;
+    width: 200px;
   }
 }
 @media screen and  (max-width: 320px){
