--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -413,7 +413,7 @@ background: #1f1f26;
     .checkButton {
         display: flex;
         position: absolute;
-        left: 536px;
+        left: 525px;
         margin-bottom: 10px;
     }
     .video-container video {
@@ -532,7 +532,33 @@ background: #1f1f26;
     }
     .langs{
         padding-left: 0;
-        padding-right: 29px;
+        padding-right: 10px;
+    }
+}
+@media screen and (max-width: 425px) {
+    .block-logo {
+    column-gap: 10px;
+    margin-left: 10px;
+    }
+    .checkButton {
+        left: 240px;
+    }
+    label.logo {
+        padding-left: 10px;
+    }
+    .video-container video {
+        width: 380px;
+        height: 260px;
+        margin-left: 15px;
+        margin-top: 0;
+    }
+    .video-container .close {
+        position: absolute;
+        left: 365px;
+        top: 10px;
+    }
+    .nav_list-elements {
+        width: 345px;
     }
 }
 @media screen and (max-width: 375px){
@@ -595,7 +621,6 @@ background: #1f1f26;
     }
     .nav_list{
         width: 312px;
-
     }
     .nav_list-item {
         width: 95%;
@@ -728,6 +753,7 @@ background: #1f1f26;
     }
     .nav_menu {
         column-gap: 40px;
+        margin: -1px;
     }
     .video-container video {
         width: 290px;
