--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -343,9 +343,9 @@ a {
     margin: 206px 130px 0 130px;
   }
   .block-seven-image {
-    width: 335px;
-    height: 588px;
-  }
+    width: 350px;
+    height: 350px;
+}
   
   .block-eight {
     margin: 180px 130px 70px 130px;
@@ -399,6 +399,46 @@ a {
     font-size: 55px;
   }
 }
+@media screen and (max-width: 1024px){
+  .lead__download-links-list {
+    column-gap: 0px;
+    flex-direction: row-reverse;
+  }
+  .section-image-one, .section-two-image-one {
+    margin-right: 0px;
+  }   
+  .section-two {
+    column-gap: 0px;
+  }
+  .section-two-image-one, .section-two-image-two {
+    width: 205px;
+    height: 420px;
+  }
+  .section-first-paragraf {
+    font-size: 49px;  
+  }
+  .section-as-iframe-video {
+    width: 980px;
+  }
+  .block-for-image-two,.block-for-image-one {
+    width: 250px;
+    height: 532px;
+  } 
+  .block-seven {
+    column-gap: 52px;
+    margin: 194px 100px 0 100px;
+  }
+  .block-eight {
+    margin: 168px 20px 70px 20px;
+  }
+  .block-eight-card {
+    list-style: none;
+    display: grid;
+    row-gap: 60px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+}
 @media screen and (max-width: 768px) {
   .lead__download-links-list {
     justify-content: center;
@@ -407,7 +447,7 @@ a {
   }
   .lead__download-links-list {
     margin-top: 500px;
-    flex-direction: row-reverse;
+    column-gap: 30px;
   }
   .section-block-one {
   position: absolute;
@@ -464,7 +504,7 @@ a {
     margin-right: 0;
   }
   .block-for {
-    column-gap: 50px;
+    column-gap: 20px;
     margin: 80px 0 100px;
     justify-content: center;
   }
@@ -556,7 +596,7 @@ a {
     display: flex;
     align-items: center;
     padding: 0px;
-    margin: 31px 50px 9px 50px;
+    margin: 75px 50px 9px 50px;
     column-gap: 30px;
     
   }
@@ -584,10 +624,10 @@ a {
     margin-right: 5px;
   }
   .block-seven-image {
-    width: 227px;
-    height: 400px;
+    width: 230px;
+    height: 230px;
     margin-bottom: 0;
-  }
+}
   .block-eight-link {
     width: 546px;
     height: 60px;
@@ -599,6 +639,256 @@ a {
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   }
 }
+@media screen and (max-width: 425px) {
+  .section-first-paragraf{
+		margin-bottom: 20px;
+	}
+  .icon-sfera {
+    font-size: 16px;
+  }
+  .section-first {
+    margin: 0 16px;
+  }
+  .section__landing {
+    margin-top: 0;
+  }
+  .navigation {
+    margin-bottom: 48px;
+  }
+  .section-first-paragraf {
+    font-size: 22px;
+    line-height: 26px;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .section-first{
+	  margin-bottom: 0;
+  }
+  .link-list-left-color {
+    font-size: 14px;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .list-left {
+    text-align: center;
+    padding: 80px 0 0px 0px;
+  }
+  .section-two {
+    display: flex;
+    flex-direction: column-reverse;
+    column-gap: 238px;
+    justify-content: center;
+    margin: 100px 300px;
+  }
+  .block-for-image-two {
+  display: none;
+  }
+  .link-list-left,
+  .block-first-color,
+  .link-list-left-for-li {
+    font-size: 14px;
+    margin: 0;
+  }
+  .block-first-color-for {
+    font-size: 14px;
+    margin: 10px 0 0 0;
+    line-height: 20px;
+  }
+  .link-list-left-for {
+    width: 16px;
+  }
+  .section-block-one {
+    top: 340px;
+  }
+  .lead__download-links-list {
+    padding: 0;
+    row-gap: 10px;
+    margin-top: 400px;
+  }
+  .section-image-one {
+    width: 151px;
+    height: 317px;
+    margin-right: 20px;
+  }
+  .section-image-two {
+    width: 159px;
+    height: 317px;
+  }  
+  .section-two {
+	  margin:0;
+    padding: 0;
+  }                  
+  .section-two-image-one {
+    width: 155px;
+    height: 324px;
+    margin: 0 20px 0 0;
+  }
+  .section-two-image-two {
+    width: 155px;
+    height: 324px;
+
+  }
+  .block-first-color-for,
+  .block-first-color {
+    margin-bottom: 18px;
+  }
+  .block-for {
+    margin: 28px 0 20px 0px;
+  }
+  .block-footer-one {
+    padding-bottom: 1px;
+  }
+  .block-for-image-one {
+    width: 102px;
+    height: 219px;
+    margin: 0;
+  }
+  .block-for-image-two {
+    width: 150px;
+    height: 300px;
+    margin: 0;
+  }
+  .block-for {
+    column-gap: 0px;
+    margin-right: 20px;
+}
+  .section-two-content-social-block-mobile {
+    display: block;
+    font-size: 24px;
+  }
+  .section-two-content-number {
+    font-size: 24px;
+    line-height: 37px;
+    padding: 10px;
+  }
+  .section-two-content-message,
+  .section-two-content-social  {
+    font-weight: 400;
+    font-size: 28px;
+    Line-height: 43px;
+  }
+  .section-about-as-heading {
+    margin-top: 60px;
+    font-size: 22px;
+    line-height: 26px;
+    font-weight: 600;
+  }
+  .about-as-heading{
+    padding-bottom: 10px;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 600;
+	  margin-top: 10px;
+  }
+  .block-for-image {
+    column-gap: 15px;
+}
+  .about-as-heading-last {
+    font-size: 24px;
+    line-height: 37px;
+    text-align: left;
+  } 
+  .section-as-heading {
+    margin-top: 35px;
+    font-size: 20px;
+  }
+  .section-as-iframe-video {
+    width: 314px;
+    height: 270px;
+}
+  .list-left-for {
+    font-size: 14px;
+  }
+  .list-left-for {
+    /* background: none; */
+    padding-left: 25px;
+  }
+  .block-seven {
+	  margin-top: 50px;
+  }
+  .block-seven-paragraf {
+    Line-height: 20px;
+    font-size: 16px;
+  }
+  .block-six-link {
+    margin: 0px;
+    padding: 6px 5px 6px 4px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .block-seven-p {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 600;
+  }
+  .block-seven-text {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+  }
+  .block-eight-link {
+    width: 335px;
+    font-size: 14px;
+	  margin-bottom: 0;
+	  margin-top: 30px;
+  }
+  .section-two-content {
+    width: auto;
+    height: auto;
+    margin-left: 0;
+	  margin-top: 80px;
+  }
+  .block-seven-paragraf {
+    margin-left: 0px;
+    text-align: start;
+  }
+  .block-six {
+    margin-left: -5px;
+  }
+  
+  .block-eight {
+	  margin: 50px 0 0 0;
+    text-align: center;
+  }
+  .section-as {
+	margin-bottom: 0px;
+  }
+  .link-list-left-for {
+    margin-right: 13px;
+  }
+  .about-as-heading-last{
+    text-align: center;
+    margin: 0;
+    font-size: 24px;
+    line-height: 37px;
+  }
+  .block-seven {
+    margin: 23px 30px 10px 30px;
+    column-gap: 30px;
+}
+.block-seven-image {
+  width: 105px;
+  height: 105px;
+  margin: 0 0 60px 0;
+}
+  .block-eight-card {
+    padding: 0;
+    row-gap: 20px;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .block-eight-card-image {
+    width: 150px;
+    height: 300px;
+  }
+  .block-eight-card-list-paragraf {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+  }
+}
+
 @media screen and (max-width: 375px) {
 	.section-first-paragraf{
 		margin-bottom: 20px;
@@ -754,7 +1044,7 @@ a {
   }
   .section-as-iframe-video {
     width: 337px;
-    height: 30%;
+    height: 270px;
   }
   .list-left-for {
     font-size: 14px;
@@ -823,14 +1113,14 @@ a {
     line-height: 37px;
   }
   .block-seven {
-    margin: 23px 30px 10px 30px;
-    column-gap: 30px;
+    margin: 23px 14px 10px 20px;
+    column-gap: 3px;
 }
-  .block-seven-image {
-    width: 97px;
-    height: 164px;
-    margin: 0 0 60px 0;
-  }
+.block-seven-image {
+  width: 105px;
+  height: 105px;
+  margin: 0 0 60px 0;
+}
   .block-eight-card {
     padding: 0;
     row-gap: 20px;
@@ -847,7 +1137,16 @@ a {
     line-height: 18px;
   }
 }
+@media screen and (max-width: 360px) {
+.section-block-one {
+  right: 5px;
+}
+}
 @media screen and (max-width: 320px) {
+  .section-block-one {
+    right: 10px;
+}
+
   .section-as-iframe-video {
     width: 280px;
     height: 258px;
@@ -872,10 +1171,15 @@ a {
   }
   .lead__download-links-list {
     margin-top: 340px;
+    margin-right: 0px;
 }
-  .block-for {
-    margin: 38px 5px 0 5px;
-  }
+.section-two-image {
+  padding: 50px 0;
+  margin-left: 20px;
+}
+.block-for {
+  margin: 38px 0px 0 25px;
+}
   .block-for-list  {
     font-size: 12px;
     line-height: 18px;
