--- a/assets/css/startups.css
+++ b/assets/css/startups.css
@@ -158,6 +158,15 @@
   }
   
 }
+@media screen and (max-width: 1024px) {
+.lead__image {
+  width: 360px;
+  height: 340px;
+}
+.frame__wrapper {
+  margin: 149px 60px 100px 60px;
+}
+}
 @media screen and (max-width: 768px) {
   .startups__wrapper {
     margin: 0 50px;
@@ -165,9 +174,9 @@
 .section__startups {
   padding: 0px 0 20px 0;
 }
-.lead__download-links-list {
+/* .lead__download-links-list {
   margin-left: 25px;
-}
+} */
   .lead__text {
     font-weight: 400;
     font-size: 18px;
@@ -213,9 +222,9 @@
     line-height: 48px;
   }
   .description__list {
-  margin: 0 0 100px 45px;
-  padding: 0;
-  flex-direction: column;
+    margin: 0px 0 20px 45px;
+    padding: 0;
+    flex-direction: column;
   }
   .frame__wrapper {
     margin: 0 50px 50px 30px;
@@ -233,11 +242,14 @@
     font-weight: 400;
     line-height: 22px;
   } 
+  .frame__wrapper {
+    margin: 120px 60px 150px 60px;
+  }
 }
-@media screen and (max-width: 375px) {
-  
+
+@media screen and (max-width: 425px) {
   .startups__wrapper {
-    margin: 0 14px 0;
+    margin: 0 30px 0;
   }
   .lead__image {
     width: 350px;
@@ -246,23 +258,24 @@
   .lead__images {
     position: absolute;
     top: 400px;
-    left: 0;
+    left: 25px;
   }
   .lead__texts {
     margin-top: 120px;
   }
   .section__startups {
     padding: 0px 0 30px 0;
-}
+  }
   .lead__text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  margin-bottom: 300px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    margin-bottom: 300px;
   }
   .lead__download-links-list {
   row-gap: 20px;
   justify-content: center;
+  margin-left: 20px;
   }
   .lead__title {
     font-weight: 600;
@@ -270,8 +283,8 @@
     line-height: 26px;
   }
   .description__wrapper {
-    margin: 50px 25px;
-  }
+    margin: 50px 20px;
+}
   .description__list__heading {
     margin: 0 0 40px 0;
     font-size: 22px;
@@ -302,6 +315,18 @@
     width: 210px;
   }
 }
+
+@media screen and (max-width: 375px) {
+  
+  .startups__wrapper {
+    margin: 0 14px 0;
+  }
+  .lead__images {
+    position: absolute;
+    top: 400px;
+    left: 0;
+  }
+}
 @media screen and (max-width: 320px) {
   .lead__download-links-list {
     margin: 0;
@@ -313,5 +338,7 @@
   .lead__text {
     width: 200px;
   }
-  
+  .frame__wrapper {
+    margin: 70px 60px 50px 60px;
+}
 }
